[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "google-seo-rank"
version = "1.0.0"
description = "Google SEO rank tracker and automatic competitor analysis tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "yasar-afk"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Indexing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "pandas>=2.0.0",
    "halo>=0.0.31",
    "termcolor>=2.3.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/yasar-afk/google-seo-rank"
Repository = "https://github.com/yasar-afk/google-seo-rank"

[project.scripts]
seo-rank = "rank_tracker:main"
seo-analiz = "rakip_analiz:main"
